fixed spacing on signup page adjusted overflow properties

--- a/src/components/about_page/about.scss
+++ b/src/components/about_page/about.scss
@@ -6,6 +6,7 @@ sans-serif;
 .about-container {
     height: 100vh;
     background-color: #182027;
+    overflow: scroll;
 
     .about-header {
         color: #fff;
@@ -17,12 +18,29 @@ sans-serif;
         @media screen and (max-width: 420px) {
             color: white;
             margin-bottom: 3rem;
+            font-size: 3rem;
+        }
+
+        @media screen and (max-width: 377px) {
+            font-size: 2.3rem;
+        }
+
+        @media screen and (max-width: 322px) {
+            font-size: 2rem;
         }
 
         .chevron {
             font-size: 3rem;
             font-weight: bold;
             margin: 0 1rem;
+
+            @media screen and (max-width: 377px) {
+                font-size: 2.3rem;
+            }
+
+            @media screen and (max-width: 322px) {
+                font-size: 2rem;
+            }
         }
     }
 
@@ -39,15 +57,14 @@ sans-serif;
             &:nth-child(n+3) {
                 margin-top: 3%;
                 padding-bottom: 20px;
-                
             }
         }
 
-        @media screen and (min-width: 1000px) {
-            &:nth-child(n+3) {
-                margin-bottom: -5rem;
-            }
-        }
+        // @media screen and (min-width: 1000px) {
+        //     &:nth-child(n+3) {
+        //         margin-bottom: -5rem;
+        //     }
+        // }
 
         .role {
             color: white;
