--- a/src/components/account/sign_up/sign_up.scss
+++ b/src/components/account/sign_up/sign_up.scss
@@ -3,6 +3,10 @@ $break-mobile: 600px;
 $break-tablet: 601px;
 $break-mid-desktop: 869px;
 
+html {
+    overflow: hidden;
+}
+
 #passwordconfirm {
     color: lightgray;
 }
@@ -21,6 +25,7 @@ $break-mid-desktop: 869px;
     background-attachment: fixed;
     background-size: cover;
     background-position-x: 50%;
+    overflow: scroll;
 
     .input-field > label {
         color: white;
@@ -88,7 +93,7 @@ $break-mid-desktop: 869px;
         }
 
         @media screen and (min-width: $break-mid-desktop) {
-            top: 4rem;
+            top: 3rem;
         }
     }
 
