--- a/src/components/nba_stats/gameinfo.scss
+++ b/src/components/nba_stats/gameinfo.scss
@@ -1,3 +1,4 @@
 .stats-wrapper{
-   height: 100%
+   height: 100%;
+   overflow: scroll;
 }
